<resources>
    <string name="app_name">CCSCAN</string>
    <string name="tab_register">登记</string>
    <string name="tab_records">记录</string>
    <string name="tab_database">资料库</string>
    <string name="today_registered">今日已登记：%1$d 条</string>
    <string name="tracking_number">快递单号</string>
    <string name="customer_mark">客户唛头</string>
    <string name="product_name">商品名称</string>
    <string name="quantity">数量</string>
    <string name="weight">重量(kg)</string>
    <string name="save">保存</string>
    <string name="export_excel">导出 Excel</string>
    <string name="customer_database">客户唛头资料库</string>
    <string name="product_database">商品名称资料库</string>
    <string name="scan_success">扫描成功</string>
    <string name="no_records">暂无记录</string>
    <string name="loading">加载中...</string>
    <string name="load_more">加载更多</string>
    <string name="confirm_delete">确定删除？</string>
    <string name="add">添加</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="full_name">全称</string>
    <string name="abbreviation">字母缩写</string>
    <string name="numeric_code">数字代称</string>
    <string name="import_excel">导入 Excel</string>
    <string name="select_file">选择文件</string>
    <string name="column_mapping">列映射</string>
    <string name="map_full_name">全称列</string>
    <string name="map_abbreviation">缩写列</string>
    <string name="map_numeric_code">数字代码列</string>
    <string name="start_import">开始导入</string>
    <string name="import_success">导入成功，共 %1$d 条记录</string>
    <string name="import_failed">导入失败</string>
    <string name="please_select_file">请先选择文件</string>
    <string name="please_map_columns">请完成列映射</string>
    <string name="backup_scheduled">自动备份已启动</string>
</resources>